--- a/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
+++ b/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
@@ -40,8 +40,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal" Grid.Row="0">
-                    <Button Content="备份数据库" Command="{Binding BackupDatabaseCommand}" Margin="0,0,5,0"/>
-                    <Button Content="备份资源" Command="{Binding BackupResourcesCommand}"   Margin="0,0,5,0"/>
+                    <Button Content="备份数据库" Command="{Binding BackupResourcesCommand}" Margin="0,0,5,0"/>
                     <Button Content="全盘备份" Command="{Binding BackupAllResourcesCommand}"   Margin="0,0,5,0"/>
                     <Button Content="加载备份" Command="{Binding RestoreSelectCommand}" Background="Red" Foreground="White"/>
                 </StackPanel>
