--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -284,7 +284,7 @@
                                 <TextBlock Text="CVICE范围" Width="100"/>
                                 <TextBox  Text="{Binding ImageViewModel.MouseMagnifier.Radius}" Style="{StaticResource TextBox.Small}"/>
                             </DockPanel>
-                            <TextBlock Text="设置为圆的时候，输入的值是直径"/>
+                            <TextBlock Text="设置为圆的时候，输入的值是半径"/>
 
                             <DockPanel Margin="0,2">
                                 <TextBlock Text="CVICE Type:" Width="100"/>
