--- a/Engine/ColorVision.Engine/Templates/FindLightArea/DisplayRoi.xaml
+++ b/Engine/ColorVision.Engine/Templates/FindLightArea/DisplayRoi.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColorVision.Engine.Templates.ROI.DisplayRoi"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.FindLightArea.DisplayRoi"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.Templates.ROI"
+             xmlns:local="clr-namespace:ColorVision.Engine.Templates.FindLightArea"
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance local:AlgorithmRoi}"
